# Differentiation

./: .gitignore  CMakeLists.txt  README.md  makefile
scripts/: progess.py
src/: Data.cpp  Data.h  DenseLayer.cpp  DenseLayer.h  DuplicateDenseLayer.h  Function.cpp  Function.h  Input.h  Layer.cpp  Layer.h  Reader.cpp  Reader.h  config.h  logging.cpp  main.cpp  mappings.cpp  mappings.h  matmul.cpp  matmul.h  merge.cpp  merge.h  network.cpp  network.h  optimiser.cpp  optimiser.h  util.h
src/activations/: Activation.h  ClippedReLU.cpp  ClippedReLU.h  Linear.cpp  Linear.h  ReLU.cpp  ReLU.h  Sigmoid.cpp  Sigmoid.h
src/dataset/: batchloader.h  dataset.h  reader.h  shuffle.h
src/layers/: DenseLayer.h  DuplicateDenseLayer.h  Layer.cpp  Layer.h  WeightClamp.cpp  WeightClamp.h  matmul.cpp
src/loss/: Loss.cpp  Loss.h  MSE.cpp  MSE.h
src/misc/: Reader.cpp  Reader.h  config.h  csv.h  logging.cpp  timer.h  util.h
src/network/: ThreadData.cpp  ThreadData.h  merge.cpp  merge.h  network.cpp  network.h
src/optimiser/: Adam.cpp  Adam.h  GD.cpp  GD.h  optimiser.cpp  optimiser.h
src/position/: bitboard.h  fenparsing.h  position.h
src/structures/: Data.cpp  Data.h  Input.h
src/verify/: checkGradients.h
